Changes to xtest to accomodate SAML claims when testing XUA support.